@@ -5,6 +5,7 @@ detailled list of changes, please see ChangeLog.
 -------------------
  * sandboxutils.needed_runtime_packages(): Create cache directory for
    Contents.gz if missing. (LP: #933199)
+ * apt/dpkg: Recognize options in apt sources.list. (LP: #1238620)
 
 2.12.5 (2013-09-27)
 -------------------
